test/fail/NotEnoughParameters.ma
-- 2013-04-05

data D (A, B : Set) { c : D A }
